--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,7 @@ main {
 }
 
 footer {
+  background-image: url("./images/back.png");
   background: #470707;
   color: white;
   text-align: center;
