--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-  background-image: url("./images/back.png");
+  background-image: url("images/back.png");
   background-repeat: no-repeat;
   background-size: 100vw 100vh;
   background-blend-mode: screen;
